# waybar-module-pomodoro

./: Cargo.toml  README.md  double-click-handler.sh
.github/workflows/: rust.yml
src/: cache.rs  config.rs  main.rs  utils.rs
src/models/: config.rs  message.rs  mod.rs
src/services/: cache.rs  mod.rs  server.rs  timer.rs
src/utils/: consts.rs  mod.rs
